--- a/netlify.toml
+++ b/netlify.toml
@@ -16,3 +16,15 @@ ZOLA_VERSION = "0.15.2"
 
 [context.deploy-preview]
 command = "zola build --base-url $DEPLOY_PRIME_URL"
+
+[[redirects]]
+  from = "http://focusretreat.center"
+  to = "https://focusretreatcenter.com"
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "https://focusretreat.center"
+  to = "https://focusretreatcenter.com"
+  status = 301
+  force = true
