--- a/netlify.toml
+++ b/netlify.toml
@@ -29,8 +29,14 @@ command = "zola build --base-url $DEPLOY_PRIME_URL"
   status = 301
   force = true
 
+# [[redirects]]
+#   from = "https://focusretreatcenter.com/apply"
+#   to = "https://forms.gle/7aL9MjzP3VK7Mhdz9"
+#   status = 307
+
 [[redirects]]
-  from = "https://focusretreatcenter.com/apply"
-  to = "https://forms.gle/7aL9MjzP3VK7Mhdz9"
+  from = "https://focusretreatcenter.com/contact"
+  to = "https://us14.list-manage.com/contact-form?u=a54483dfc73731ced2ff35a04&form_id=33ffae0ec11579cdc44c4f30cb839689"
   status = 307
+
 
