Reorganize blog for asset colocation
- This requires trailing_slash=true which I don't really like but
  assett colocation really is a nicer way to keep photos and blog posts
  together, so accept it
- Added a new blog post about the August Programming Retreat
- Updated new-post.sh with the new filesystem layout

--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ base_url = "https://focusretreatcenter.com"
 
 # Enable blog atom feed atom.xml
 generate_feed = true
+trailing_slash = true
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
