Add redirects for old clickfunnel URLs

--- a/netlify.toml
+++ b/netlify.toml
@@ -40,6 +40,16 @@ command = "zola build --base-url $DEPLOY_PRIME_URL"
   status = 307
 
 [[redirects]]
+  from = "https://ink.focusretreat.center/*"
+  to = "https://focusretreatcenter.com/2023/inktober/"
+  status = 307
+
+[[redirects]]
+  from = "https://code.focusretreat.center/*"
+  to = "https://focusretreatcenter.com/2023/programming/"
+  status = 307
+
+[[redirects]]
   from = "https://focusretreatcenter.com/2022/bar-exam"
   to = "https://focusretreatcenter.com"
   status = 301
