--- a/netlify.toml
+++ b/netlify.toml
@@ -39,7 +39,7 @@ command = "zola build --base-url $DEPLOY_PRIME_URL"
   status = 302
 
 [[redirects]]
-  from = "http://ink.focusretreat.center"
+  from = "http://ink.focusretreat.center/"
   to = "https://focusretreatcenter.com/2023/inktober/"
   status = 302
 
@@ -49,7 +49,7 @@ command = "zola build --base-url $DEPLOY_PRIME_URL"
   status = 302
 
 [[redirects]]
-  from = "https://ink.focusretreat.center"
+  from = "https://ink.focusretreat.center/"
   to = "https://focusretreatcenter.com/2023/inktober/"
   status = 302
 
