--- a/netlify.toml
+++ b/netlify.toml
@@ -19,6 +19,11 @@ command = "zola build --base-url $DEPLOY_PRIME_URL"
 
 # Do these specific first then generic lower down
 [[redirects]]
+  from = "https://focusretreatcenter.com/signin"
+  to = "https://app.enrollsy.com/r/gj-62Ur6OcQG7QQRu0VP5"
+  status = 302
+
+[[redirects]]
   from = "https://focusretreatcenter.com/2022/bar-exam/"
   to = "https://focusretreatcenter.com"
   status = 301
