--- a/netlify.toml
+++ b/netlify.toml
@@ -34,6 +34,12 @@ command = "zola build --base-url $DEPLOY_PRIME_URL"
   status = 301
 
 [[redirects]]
+  from = "https://focusretreatcenter.com/2023/programming"
+  to = "https://focusretreatcenter.com#program"
+  status = 301
+
+
+[[redirects]]
   from = "https://focusretreatcenter.com/contact"
   to = "https://us14.list-manage.com/contact-form?u=a54483dfc73731ced2ff35a04&form_id=33ffae0ec11579cdc44c4f30cb839689"
   status = 302
