--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ trailing_slash = true
 compile_sass = true
 
 # Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
+build_search_index = false
 
 [markdown]
 # Whether to do syntax highlighting
